Resolved screen jump issue.

--- a/src/app/shared/components/question/question.component.scss
+++ b/src/app/shared/components/question/question.component.scss
@@ -14,11 +14,6 @@
   .question-list li:nth-child(2n +2){ margin-right: 0 }
   .question-cont .btn{ margin-top: 15px; width: 100% }
 }
-.submit-btn
-{
-  margin-top: 10px;
-}
-
 .gameplay h1{ font-size: 24px; font-family: 'hindmedium'; padding: 0}
 .gameplay h2{ font-size: 20px; font-family: 'hindregular'; margin: 0 auto; }
 .popupbottom{ font-size: 14px; padding: 15px 0; }
