--- a/src/app/social/components/blog/blog.component.scss
+++ b/src/app/social/components/blog/blog.component.scss
@@ -39,10 +39,6 @@ h2 a{ font-family:'hindmedium'; font-size: 16px; transition: 0.3s ease-in-out;}
 {
   cursor: pointer;
 }
-.spacing
-{
-  padding-right: 10%;
-}
 .subtitle
 {
   height: 65px;
